--- a/_sources/lecture1.ipynb
+++ b/_sources/lecture1.ipynb
@@ -109,7 +109,7 @@
     "### Exercises\n",
     "\n",
     "```{admonition} Exercise 1\n",
-    "Think about the following scientific (i.e. 'World of Matter') questions and how you might build a mathematical model to help answer them. Try to write down the required quantities that need to go into the model and the modelling assumptions. Note that these are not simple examples and there is no single correct answer, but this question is just to get you thinking. So have a go and don't worry if you are not sure what you write is correct! I'm happy to discuss your ideas if you want: drop me an email or book and office hour appointment.\n",
+    "Think about the following scientific questions and how you might build a mathematical model to help answer them. Try to write down the required quantities that need to go into the model and the modelling assumptions. Note that these are not simple examples and there is no single correct answer, but this question is just to get you thinking. So have a go and don't worry if you are not sure what you write is correct! I'm happy to discuss your ideas if you want: use the Discussion Board or come ot my student hours.\n",
     "\n",
     "(a) Given a scenario where the average world's temperature will increase by $x$ degrees centigrade in the next 50 years, how much will the average global sea level rise?\n",
     "\n",
