--- a/_sources/lecture10.ipynb
+++ b/_sources/lecture10.ipynb
@@ -21,14 +21,12 @@
     "\n",
     "This is a second order differential equation. We will be studying various examples of these, how to solve them, and how they are used to model specific scenarios, during the next few lectures.\n",
     "\n",
-    "<img src=\"https://cdn.mathpix.com/cropped/2024_08_15_47e3dbc6a969338aa838g-1.jpg?height=415&width=1103&top_left_y=1611&top_left_x=479\" alt=\"drawing\" width=\"400\"/>\n",
+    "<img src=\"mas108_spring_in_space.png\" alt=\"drawing\" width=\"400\"/>\n",
     "\n",
     "*Figure 15: A spring in a gravity-free environment, with a mass on one end, fixed at the other end, with extension given by $x(t)$.*\n",
     "\n",
     "```{prf:example}\n",
-    "Consider a mass $m$ on one end of a spring in a gravity-free environment (e.g. space), assuming that there is no friction. The other end is fixed. If we stretch the spring a distance $L$ and release it at time $t=0$, it has a single force acting on it, due to the tension of the spring, which we will call $T$. Hooke's law says that $T=k x$ where $k$ is the stiffness of the spring and $x$ is the extension of the spring. We can thus use the second law of motion\n",
-    "\n",
-    "(Equation 106) to show that\n",
+    "Consider a mass $m$ on one end of a spring in a gravity-free environment (e.g. space), assuming that there is no friction. The other end is fixed. If we stretch the spring a distance $L$ and release it at time $t=0$, it has a single force acting on it, due to the tension of the spring, which we will call $T$. Hooke's law says that $T=k x$ where $k$ is the stiffness of the spring and $x$ is the extension of the spring. We can thus use the second law of motion (Equation 106) to show that\n",
     "\n",
     "$$\n",
     "\\begin{equation*}\n",
@@ -95,6 +93,7 @@
     "$$\n",
     "```\n",
     "```{prf:proof}\n",
+    "\n",
     "We begin by looking for a solution of the type $x(t)=A \\exp (m t)$ for $A \\neq 0$, so that $\\dot{x}=m A \\exp (m t)$ and $\\ddot{x}=m^{2} A \\exp (m t)$. Plugging this into Equation (109) gives $A m^{2} \\exp (m t)+A m b \\exp (m t)+A c \\exp (m t)=0$. Cancelling $A \\exp (m t)$ throughout leads to\n",
     "\n",
     "$$\n",
@@ -127,6 +126,7 @@
     "where $A$ and $B$ are constants.\n",
     "```\n",
     "```{prf:proof}\n",
+    "\n",
     "In this case, we set $x(t)=(A t+B) \\exp (m t)$, where $m=-b / 2$. Then $\\dot{x}=$ $(A t+B) m \\exp (m t)+A \\exp (m t)$ and $\\ddot{x}=(A t+B) m^{2} \\exp (m t)+2 A m \\exp (m t)$. Putting\n",
     "these into the LHS of Equation (109), and using $b=-2 m$ and $c=b^{2} / 4=m^{2}$, gives\n",
     "\n",
@@ -157,6 +157,7 @@
     "where $A$ and $B$ are constants and $q=\\sqrt{4 c-b^{2}} / 2$.\n",
     "```\n",
     "```{prf:proof}\n",
+    "\n",
     "This involves plugging Equation (116) into the LHS of Equation (109) and showing that all the terms vanish, which is just a direct (if slightly lengthy) calculation. I will leave it as a homework exercise (Exercise 22). Once you have learned about complex numbers, there is a slicker way of proving this (although it is not necessary to use complex numbers).\n",
     "```\n",
     "For example, to find the general solution of $\\ddot{x}+4 \\dot{x}+8 x=0$, notice that $b=4$ and $c=8$ so $b^{2}-4 c=-16<0$ so we can apply Proposition 6 . Here, $q=2$, so $x(t)=$ $\\exp (-2 t)[A \\sin (2 t)+B \\cos (2 t)]$ for constants $A$ and $B$.\n",
