--- a/_sources/lecture8.ipynb
+++ b/_sources/lecture8.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "A dispersing animal will want to find the 'best place' to live on the landscape, which may mean the place with the most access to the resources it needs, or away from danger, or a combination thereof. Suppose we can quantify the 'quality' of the landscape (as perceived by the animal) as a function $G(x)$, where $x$ is space. Here we are assume (for simplicity despite lack of realism) that the landscape is one dimensional. Then a simple model of animal movement might assume that the change in location over time is equal to the gradient of $G(x)$ (Figure 9), so define $g(x)=\\frac{\\mathrm{d} G}{\\mathrm{~d} x}$.\n",
     "\n",
-    "<img src=\"https://cdn.mathpix.com/cropped/2024_08_15_0b9a9bf69f871124de5dg-1.jpg?height=638&width=1332&top_left_y=1143&top_left_x=365\" alt=\"drawing\" width=\"800\"/>\n",
+    "<img src=\"mas108_anim_disp.png\" alt=\"drawing\" width=\"800\"/>\n",
     "\n",
     "*Figure 9: Panel (a) shows an example landscape whose quality (for a dispersing animal) is given by a function $G(x)$. If the animal is at a place where the gradient of $G(x)$ is positive, such as the rabbit on the left-hand side at $x \\approx 30$, the animal will move to the right. On the other hand, if the gradient of $G(x)$ is negative, such as at $x \\approx 75$, the animal will move left. Panel (b) shows $g(x)$, the gradient of $G(x)$. The left-hand arrow shows the point where the left-hand rabbit from Panel (a) resides. Note that the value of $g(x)$ is positive here. The right-hand arrow shows the point where the right-hand rabbit from Panel (a) resides, where $g(x)$ is negative.*\n",
     "\n",
@@ -74,7 +74,7 @@
     "We can draw a diagram of this, as shown in Figure (10). We simply draw a straight line, put\n",
     "dots at the points where $\\sin (x)=0$, and flow arrows denoting the direction of change of $x$. This is called the phase line.\n",
     "\n",
-    "<img src=\"https://cdn.mathpix.com/cropped/2024_08_15_0b9a9bf69f871124de5dg-3.jpg?height=981&width=1100&top_left_y=372&top_left_x=478\" alt=\"drawing\" width=\"400\"/>\n",
+    "<img src=\"mas108_sin_pl\" alt=\"drawing\" width=\"400\"/>\n",
     "\n",
     "*Figure 10: Here we plot $\\sin (x)$ with the corresponding phase line beneath. We can see that the unstable equilibria are $x=2 \\pi n$ for $n \\in \\mathbb{Z}$ whilst the stable equilibria are $x=(2 n+1) \\pi$ for $n \\in \\mathbb{Z}$.*\n",
     "\n",
@@ -96,7 +96,7 @@
     "- Put a point on the line at any value of $U$ such that $g(U)=0$,\n",
     "- Between each pair of consecutive points, draw an arrow to the right if $g(U)>0$ or to the left if $g(U)<0$.\n",
     "\n",
-    "<img src=\"https://cdn.mathpix.com/cropped/2024_08_15_0b9a9bf69f871124de5dg-4.jpg?height=1032&width=1077&top_left_y=346&top_left_x=501\" alt=\"drawing\" width=\"400\"/>\n",
+    "<img src=\"mas108_g_pl.png\" alt=\"drawing\" width=\"400\"/>\n",
     "\n",
     "*Figure 11: Here we plot the function $g(x)$ from Figure 9 with the corresponding phase line beneath. If the animal starts at around $x \\approx 30$ (see the left-hand downwards-pointing arrow) then it will move right towards the equilibrium point at $x \\approx 35$, because the arrow on the phase line points right. If the animal starts at around $x \\approx 75$ (see the right-hand downwardspointing arrow) then it will move left, eventually settling at the equilibrium point at $x \\approx 63$, because the arrow on the phase line points left.*\n",
     "\n",
@@ -121,7 +121,7 @@
     "````\n",
     "These definitions are easier to appreciate if we look at a phase line (e.g. Figure 11). Here, the equilibria are simply the points where we have dots marked on the line (where $g(U)=0$ ). If the arrows either side of an equilibrium point both point towards that point then the point is stable. Otherwise, it is unstable. So this is a really easy method for finding the equilibria of an autonomous ODE and their stability. It requires no calculations whatsoever, just some simple sketching. Nice!\n",
     "\n",
-    "<img src=\"https://cdn.mathpix.com/cropped/2024_08_15_0b9a9bf69f871124de5dg-5.jpg?height=898&width=1026&top_left_y=599&top_left_x=478\" alt=\"drawing\" width=\"400\"/>\n",
+    "<img src=\"mas108_allee_pl.png\" alt=\"drawing\" width=\"400\"/>\n",
     "\n",
     "*Figure 12: The function $U(K-U)(U-a)$ is shown with the corresponding phase line beneath. For the purposes of this plot, we have set $K=0.9$ and $a=0.3$.*\n",
     "\n",
