--- a/_sources/lecture9.ipynb
+++ b/_sources/lecture9.ipynb
@@ -61,7 +61,7 @@
     "\n",
     "*Table 8: The first row gives values of $t$ and the first column gives values of $U$. The other cells show values of $\\dot{U}$ for the corresponding values of $U$ and $t$, as determined by Equation (104).*\n",
     "\n",
-    "<img src=\"https://cdn.mathpix.com/cropped/2024_08_15_b75e659e00b9274dd64dg-2.jpg?height=1118&width=1083&top_left_y=840&top_left_x=495\" alt=\"drawing\" width=\"400\"/>\n",
+    "<img src=\"mas108_dir_field.png\" alt=\"drawing\" width=\"400\"/>\n",
     "\n",
     "*Figure 13: Direction field for Equation (104).*\n",
     "```\n",
@@ -96,7 +96,7 @@
     "\n",
     "*Table 9: The first row gives values of $t$ and the first column gives values of $U$. The other cells show values of $\\dot{U}$ for the corresponding values of $U$ and $t$, as determined by Equation (104).*\n",
     "\n",
-    "<img src=\"https://cdn.mathpix.com/cropped/2024_08_15_b75e659e00b9274dd64dg-3.jpg?height=709&width=960&top_left_y=1687&top_left_x=525\" alt=\"drawing\" width=\"400\"/>\n",
+    "<img src=\"mas108_dir_field2.png\" alt=\"drawing\" width=\"400\"/>\n",
     "\n",
     "*Figure 14: Direction field for Equation (105).*\n",
     "```\n",
