--- a/_sources/lecture5.ipynb
+++ b/_sources/lecture5.ipynb
@@ -96,7 +96,8 @@
     "````{prf:example}\n",
     ":label: ex5_1\n",
     "Find the solution to Equation (44) where $U(0)=1$.\n",
-    "````\n",
+    "\n",
+    "## Solution.\n",
     "First we rearrange Equation (44) to give\n",
     "\n",
     "$$\n",
@@ -148,7 +149,7 @@
     "U(t)=U(0) \\exp (r t)=\\exp (r t) \\tag{51}\n",
     "\\end{equation*}\n",
     "$$\n",
-    "\n",
+    "````\n",
     "Now, in Proposition 1, we found a solution to the original difference equation, Equation (5). Notice that Equation (5) is just Equation (42) with $\\tau=1$. So it is valuable to compare Equation (51) with the solution of Equation (5). They ought to be similar, right?\n",
     "\n",
     "We found that, in Proposition 1, $U(t)=U(0)(1+r)^{t}$. By a similar argument\n",
@@ -189,7 +190,8 @@
     "````{prf:example}\n",
     ":label: ex5_2\n",
     "Solve Equation (45) for $U(0)=K / 10$.\n",
-    "````\n",
+    "\n",
+    "## Solution.\n",
     "First we rearrange Equation (45) to give\n",
     "\n",
     "$$\n",
@@ -254,7 +256,7 @@
     "\n",
     "(Technical aside: as in the previous example, we have ignored the modulus sign when taking the natural logarithm, thus finding a solution that has $0<U(t)<K$ which is correct because $0<U(0)=K / 10<K$.) Notice that, as $t$ gets very big, $U(t)$ approaches $K$, so we always reach a steady state solution (e.g. Figure 8).\n",
     "\n",
-    "<img src=\"https://cdn.mathpix.com/cropped/2024_08_14_1020f80a8e4d674d89a3g-5.jpg?height=1175&width=1172&top_left_y=1297&top_left_x=402\" alt=\"drawing\" width=\"400\"/>\n",
+    "<img src=\"mas108_cts_logistic.png\" alt=\"drawing\" width=\"400\"/>\n",
     "\n",
     "*Figure 8: A plot of the solution to the continuous logistic model (Equation 62) for $C=0.01$, $r=1, K=1$.*\n",
     "\n",
@@ -277,7 +279,7 @@
     "\\Longrightarrow U(t)=\\frac{K \\exp (r t)}{9+\\exp (r t)} \\tag{64}\n",
     "\\end{equation*}\n",
     "$$\n",
-    "\n",
+    "````\n",
     "To compare the general solution from Equation (62) to the discrete logistic model, recall two things. First, we were not able to find an exact analytic solution to the discrete logistic model (see Lecture 3), but we can for the continuous logistic model (Equation 62). Second, the behaviour of the discrete solution can get pretty wild (again, see Lecture 3), including solutions that never settle, period doubling, and chaos. In contrast, the continuous logistic model always tends towards a constant, positive, steady state, $K$ in a monotonic fashion (e.g. Figure 8).\n",
     "\n",
     "So be careful in choosing your model! The choice of discrete or continuous could lead to a big difference in the predicted outcome. In your model choice, you should be informed by the underlying reality. For example, is your organism one that could reproduce at any time (like single-celled organisms) or only at a specific time (like sheep, who reproduce once per year in spring)? If the former, then a continuous-time formalism may be better (i.e. differential equations); if the latter, then use discrete-time equations (i.e. difference equations).\n",
