--- a/_sources/lecture1.ipynb
+++ b/_sources/lecture1.ipynb
@@ -46,32 +46,32 @@
     "```{prf:example} The pirate. \n",
     "Suppose you are a pirate, firing a cannon from your ship towards a merchant sailor's ship. The cannon fires balls at a fixed speed and you know how far away the other ship is.\n",
     "\n",
-    "## Scientific question. \n",
+    "**Scientific question.**\n",
     "At what angle do you need to point the cannon when firing it, in order to hit the other ship?\n",
     "\n",
-    "## Required quantities. \n",
+    "**Required quantities.**\n",
     "Speed of exit from cannon, $u$; angle of exit from cannon, $\\theta$; acceleration due to gravity, $g$; distance between ships, $L$; horizontal speed of ball, $v_{x}(t)$; vertical speed of ball, $v_{y}(t)$; location of ball, anything else?\n",
     "\n",
-    "## Assumptions. \n",
+    "**Assumptions.**\n",
     "Air resistance and wind are negligible, cannon ball does not hit a bird (or UFO) in transit, anything else?\n",
     "\n",
-    "## Model.\n",
+    "**Model.**\n",
     "We will look in detail at modelling trajectories of such objects in Lecture 18 and following. I'll save the maths for then.\n",
     "``` \n",
     "\n",
     "```{prf:example} Population growth.\n",
     "Suppose ten rabbits (five male, five female) are introduced to an island full of lush vegetation and free of predators.\n",
     "\n",
-    "## Scientific question. \n",
+    "**Scientific question.**\n",
     "How many rabbits will there be in $N$ years time?\n",
     "\n",
-    "## Required quantities. \n",
+    "**Required quantities.** \n",
     "Number of rabbits, $U(t)$; birth rate of rabbits, $a$; natural death rate of rabbits, $d$.\n",
     "\n",
-    "## Assumptions. \n",
+    "**Assumptions.**\n",
     "Sufficient vegetation so that competition for resources is negligible, no predation, anything else?\n",
     "\n",
-    "## Model. \n",
+    "**Model.**\n",
     "Let $U(t)$ be the number of rabbits in year $t$. Suppose that each year each female gives birth to an average of $2 a>0$ rabbits. Suppose that a proportion $d \\in[0,1]$ of the rabbit population dies each year. Then we can model this as\n",
     "\n",
     "$$\n",
@@ -88,13 +88,13 @@
     "\n",
     "Suppose we have two animal populations, $A$ and $B$, that each eat the same food, so compete with one another for that food.\n",
     "\n",
-    "## Scientific question. \n",
+    "**Scientific question.**\n",
     "Do we have coexistence between the two populations, or does one end up dominating?\n",
     "\n",
-    "## Required quantities. \n",
+    "**Required quantities.**\n",
     "Number of animals in population $A$, Number of animals in population $B$, their birth and death rates, the effect of competition between $A$ and $B$ on the death rates of each (called interspecific competition), the effect of competition between individuals of the same population (called intraspecific competition).\n",
     "\n",
-    "## Model. \n",
+    "**Model.**\n",
     "Let $U(t)$ and $V(t)$ be, respectively, the number of animals in populations $A$ and $B$ at time $t$. One classical model for this is given by the following differential equations\n",
     "\n",
     "$$\n",
