--- a/_sources/lecture10.ipynb
+++ b/_sources/lecture10.ipynb
@@ -36,7 +36,8 @@
     "\n",
     "(The reason for the minus sign is that the force is in the opposite direction to the extension, see Figure 15. The constant $\\omega$ will turn out to be the angular frequency of the oscillations, as we will see in the solution.) Find an expression for the extension, $x(t)$, as a function of time. Interpret the result physically, in terms of the movement of the mass, $m$.\n",
     "\n",
-    "## Solution. \n",
+    "**Solution.**\n",
+    "\n",
     "The ODE can be written $\\ddot{x}+\\omega^{2} x=0$, where $\\omega$ is a constant. To solve such an ODE, we use something called an ansatz. That's a German word meaning, essentially, 'an educated guess that will be verified later'. The ansatz we use here is that $x=A \\cos (m t)$ for constants $m$ and $A \\neq 0$. Then $\\dot{x}=-m A \\sin (m t)$ and $\\ddot{x}=-m^{2} A \\cos (m t)$. Placing these expressions into the ODE $\\ddot{x}=-\\omega^{2} x$ gives\n",
     "\n",
     "$$\n",
@@ -175,7 +176,8 @@
     "\n",
     "Suppose the car weighs 1000 kg ( kg is kilogrammes), its initial speed is $10 \\mathrm{~ms}^{-1}$ ( m is metres and $s$ is seconds), its initial location is $x(0)=0$, and $\\beta=100 \\mathrm{kgs}^{-1}$. How far does the car travel in the next 10 seconds?\n",
     "\n",
-    "## Solution. \n",
+    "**Solution.**\n",
+    "\n",
     "The friction force is acting in the opposite direction to the motion of the car, so is\n",
     "negative. It is also proportional to the speed of the car, which is $\\dot{x}$. Therefore the force acting on the car is $-\\beta \\dot{x}$.\n",
     "\n",
