--- a/_sources/lecture11.ipynb
+++ b/_sources/lecture11.ipynb
@@ -32,7 +32,8 @@
     "\n",
     "*Figure 16: A spring on a table, with a mass on one end and fixed at the other end.*\n",
     "\n",
-    "## Solution. \n",
+    "**Solution.**\n",
+    "\n",
     "The forces acting on the particle are the tension in the spring, $T$, and the resistance, $R$, both acting horizontally to oppose motion. By Hooke's Law (see Example 15), the tension in the spring is $T=k x$. The resistance is $R=2 \\beta \\omega m \\dot{x}$. Since both $R$ and $T$ act in the opposite direction to the motion, the second law of motion (Equation 106) gives\n",
     "\n",
     "$$\n",
