--- a/_sources/lecture12.ipynb
+++ b/_sources/lecture12.ipynb
@@ -28,7 +28,8 @@
     "\n",
     "where $\\omega$ is a positive constant which should be determined.\n",
     "\n",
-    "## Solution. \n",
+    "**Solution.**\n",
+    "\n",
     "The forces acting on $P$ are the weight, $m g$, acting vertically downwards, and the tension, $T$, in the spring, acting vertically upwards. In equilibrium, let the tension in the spring be $T=T_{0}$ and the extension of the spring be $a$. By Hooke's Law, $T_{0}=k a$. Since the system is in equilibrium, the vertical forces balance (Figure 19), so\n",
     "\n",
     "$$\n",
@@ -107,7 +108,8 @@
     "```{prf:example}\n",
     "Find the general solution to Equation (141) in the case $\\sigma^{2} \\neq \\omega^{2}$.\n",
     "\n",
-    "## Solution. \n",
+    "**Solution.**\n",
+    "\n",
     "The right-hand side of Equation (141) is $\\sin (\\sigma t)$, so we will try to find a solution of the form $x(t)=A \\sin (\\sigma t)$. Here, $\\dot{x}(t)=A \\sigma \\cos (\\sigma t)$ and $\\ddot{x}(t)=-A \\sigma^{2} \\sin (\\sigma t)$. Plugging these into Equation (141) gives\n",
     "\n",
     "$$\n",
