--- a/_sources/lecture13.ipynb
+++ b/_sources/lecture13.ipynb
@@ -48,7 +48,8 @@
     "\n",
     "and find $x$ as a function of $t$.\n",
     "\n",
-    "## Solution. \n",
+    "**Solution.**\n",
+    "\n",
     "(a) By Hooke's law, the tension in the string when it is extended a distance $x$ is $T=2 m \\omega^{2} x$. Since $T$ is the only force acting on the mass (Figure 20), the second law of motion (Equation 106) says that\n",
     "\n",
     "$$\n",
