--- a/_sources/lecture15.ipynb
+++ b/_sources/lecture15.ipynb
@@ -23,7 +23,9 @@
     "$$\n",
     "\n",
     "where g is a constant vector. Sketch the path of the particle.\n",
-    "## Solution. \n",
+    "\n",
+    "**Solution.** \n",
+    "\n",
     "Since $\\overrightarrow{O P}=\\mathbf{r}$, the vector $\\overrightarrow{O P}$ is always in the direction of the constant vector $\\mathbf{g}$. Therefore $P$ moves along a straight line through the origin $O$ in the direction of $\\mathbf{g}$. At time $t$,\n",
     "\n",
     "$$\n",
@@ -147,7 +149,8 @@
     "\n",
     "where $\\mathbf{g}$ is a constant vector. Find the velocity, speed, and acceleration of the particle at time $t$.\n",
     "\n",
-    "## Solution. \n",
+    "**Solution.**\n",
+    "\n",
     "The velocity is $\\mathbf{v}(t)=\\dot{\\mathbf{r}}(t)$. Since $\\mathbf{g}$ is a constant,\n",
     "\n",
     "$$\n",
@@ -179,7 +182,8 @@
     "(b) Show that the path of the particle is a unit circle around the origin.\n",
     "(c) Show that the acceleration is orthogonal to the velocity.\n",
     "\n",
-    "## Solution. \n",
+    "**Solution.**\n",
+    "\n",
     "(a) The velocity is\n",
     "\n",
     "$$\n",
