--- a/_sources/lecture16.ipynb
+++ b/_sources/lecture16.ipynb
@@ -14,7 +14,8 @@
     "(a) Find the value of $u$ for which the boats collide.\n",
     "(b) Find the minimum distance between the boats when $u=7$.\n",
     "\n",
-    "## Solution. \n",
+    "**Solution.** \n",
+    "\n",
     "The most important thing to do at the start of any question on relative motion is to draw a sketch. This is given in Figure 23.\n",
     "\n",
     "<img src=\"https://cdn.mathpix.com/cropped/2024_08_16_18238ff787b17a985cb6g-1.jpg?height=435&width=1015&top_left_y=1433&top_left_x=526\" alt=\"drawing\" width=\"400\"/>\n",
@@ -106,7 +107,8 @@
     "```{prf:example} \n",
     "To a cyclist riding due East at $15 \\mathrm{kmh}^{-1}$ the wind appears to the cyclist to be blowing from the North-East at $12 \\mathrm{kmh}^{-1}$. Find the true velocity of the wind.\n",
     "\n",
-    "## Solution.\n",
+    "**Solution.** \n",
+    "\n",
     "As always, we start by drawing a sketch of the situation, which is shown in Figure (24).\n",
     "\n",
     "<img src=\"https://cdn.mathpix.com/cropped/2024_08_16_18238ff787b17a985cb6g-3.jpg?height=495&width=812&top_left_y=918&top_left_x=631\" alt=\"drawing\" width=\"400\"/>\n",
