--- a/_sources/lecture17.ipynb
+++ b/_sources/lecture17.ipynb
@@ -95,7 +95,8 @@
     "\n",
     "After this period of 10 s , the lift is at rest at a height of 34 m above its starting point. Find the acceleration in Stage 1.\n",
     "\n",
-    "## Solution. \n",
+    "**Solution.** \n",
+    "\n",
     "We start by drawing a graph of velocity over time (Figure 25).\n",
     "\n",
     "<img src=\"https://cdn.mathpix.com/cropped/2024_08_16_1daf131b1b3ede8ec322g-3.jpg?height=580&width=1405&top_left_y=144&top_left_x=334\" alt=\"drawing\" width=\"400\"/>\n",
@@ -120,7 +121,8 @@
     "```{prf:example}\n",
     "A student standing on the edge of a cliff 75 m above sea level throws a stone vertically upwards with a speed of $10 \\mathrm{~ms}^{-1}$. Find the time at which the stone hits the water. You can assume the acceleration due to gravity is $g=9.8 \\mathrm{~ms}^{-2}$.\n",
     "\n",
-    "## Solution. \n",
+    "**Solution.** \n",
+    "\n",
     "As always, we start by drawing a sketch (Figure 26).\n",
     "\n",
     "<img src=\"https://cdn.mathpix.com/cropped/2024_08_16_1daf131b1b3ede8ec322g-3.jpg?height=312&width=809&top_left_y=889&top_left_x=635\" alt=\"drawing\" width=\"400\"/>\n",
