--- a/_sources/lecture18.ipynb
+++ b/_sources/lecture18.ipynb
@@ -107,7 +107,8 @@
     "\n",
     "*Figure 28: The trajectory of a ball.*\n",
     "\n",
-    "## Solution. \n",
+    "**Solution.** \n",
+    "\n",
     "As usual, we start with a sketch (Figure 28) Let the vertical height of the ball be $z \\mathrm{~m}$ above the point of projection and let the ball be $x \\mathrm{~m}$ horizontally from the person. Then\n",
     "\n",
     "$$\n",
