--- a/_sources/lecture19.ipynb
+++ b/_sources/lecture19.ipynb
@@ -14,7 +14,7 @@
     "(a) has zero velocity relative to the lift,\n",
     "(b) returns to the student's hand.\n",
     "\n",
-    "## Solution. \n",
+    "**Solution.** \n",
     "\n",
     "As always, we start with a sketch (Figure 29).\n",
     "\n",
@@ -90,7 +90,8 @@
     "R=\\frac{V^{2}}{g} \\sin (2 \\theta)\n",
     "$$\n",
     "\n",
-    "## Solution. \n",
+    "**Solution.** \n",
+    "\n",
     "Recall the following formulae for a projectile from Equations (225), (226), (228), and (229)\n",
     "\n",
     "$$\n",
