--- a/_sources/lecture2.ipynb
+++ b/_sources/lecture2.ipynb
@@ -104,7 +104,8 @@
     ":label: ex2_1\n",
     "\n",
     "What is the steady state of Equation (7) for $r>0$ ?\n",
-    "## Solution.\n",
+    "\n",
+    "**Solution.**\n",
     "\n",
     "By definition, this is a number $U_{*}$ such that\n",
     "\n",
