--- a/_sources/lecture5.ipynb
+++ b/_sources/lecture5.ipynb
@@ -97,7 +97,8 @@
     ":label: ex5_1\n",
     "Find the solution to Equation (44) where $U(0)=1$.\n",
     "\n",
-    "## Solution.\n",
+    "**Solution.**\n",
+    "\n",
     "First we rearrange Equation (44) to give\n",
     "\n",
     "$$\n",
@@ -191,7 +192,8 @@
     ":label: ex5_2\n",
     "Solve Equation (45) for $U(0)=K / 10$.\n",
     "\n",
-    "## Solution.\n",
+    "**Solution.**\n",
+    "\n",
     "First we rearrange Equation (45) to give\n",
     "\n",
     "$$\n",
