--- a/_sources/lecture6.ipynb
+++ b/_sources/lecture6.ipynb
@@ -173,7 +173,8 @@
     "\\end{equation*}\n",
     "$$\n",
     "\n",
-    "## Solution. \n",
+    "**Solution.**\n",
+    "\n",
     "First re-write Equation (91) as\n",
     "\n",
     "$$\n",
