--- a/_sources/lecture8.ipynb
+++ b/_sources/lecture8.ipynb
@@ -148,7 +148,7 @@
     "\n",
     "(e) If $a<U(0)<K$ what is the limit as $t \\rightarrow \\infty$ of $U(t)$ ?\n",
     "\n",
-    "## Solution.\n",
+    "**Solution.**\n",
     "\n",
     "(a) The equilibria are where $U(K-U)(U-a)=0$, so $U=0$, $a$, or $K$.\n",
     "\n",
