--- a/_sources/lecture4.ipynb
+++ b/_sources/lecture4.ipynb
@@ -7,12 +7,14 @@
    "source": [
     "# Lecture 4. More examples of difference equation models \n",
     "\n",
-    "The last couple of lectures introduced a wealth of new concepts, which might have felt a bit overwhelming! This lecture, we are going to shift down gears with the mathematical investigations and just explore a few examples of difference equation models.\n",
+    "The last couple of lectures introduced a wealth of new concepts, which might have felt a bit overwhelming! This lecture, we are going to shift down gears with the mathematical investigations and just explore a few examples of difference equation models\n",
     "\n",
     "````{prf:example}\n",
     ":label: ex4_1\n",
     "Paying off a mortgage. Suppose you buy a house and borrow $M$ pounds from the bank as a mortgage. The bank charges interest at a rate of $R \\%$ per year, and each year you pay $s$ pounds to the bank. How long does it take to pay off your mortgage, as a function of $M, R$, and $s$ ? Writing $r=R / 100$, find the numerical value of this time when $M=200,000$, $s=10,000$, and $r=0.02$. Are there any values of $M, R$, and $s$ for which you will never pay off your mortgage?\n",
-    "````\n",
+    "\n",
+    "**Solution.**\n",
+    "\n",
     "We can model this situation as follows\n",
     "\n",
     "$$\n",
@@ -55,7 +57,7 @@
     "so it will take 26 years to pay off your mortgage.\n",
     "\n",
     "You will not get a solution if $r M>s$, so in this case you will never pay off your mortgage. This is because the annual payments are not sufficient even for paying off the interest on the mortgage.\n",
-    "\n",
+    "````\n",
     "````{prf:example}\n",
     ":label: ex4_2 Including a gestation period into population models. Suppose we have a population of organisms that breed every month at a rate $r$ but there is a gestation period of a month (i.e. a month between breeding and giving birth). Denote by $U(t)$ the number of breeding pairs at time $t$ and assume no organisms die.\n",
     "\n",
@@ -65,7 +67,8 @@
     "\n",
     "(c) Find the steady state solution of the sequence $S(t)=U(t) / U(t-1)$ for $r=1$.\n",
     "\n",
-    "## Solution.\n",
+    "**Solution.**\n",
+    "\n",
     "(a) Suppose we start with $U(0)$ organisms. In month one they breed, but they do not give birth, so at the end of the month we have $U(1)=U(0)$ organisms. In month two, those who bred in month one give birth at a rate $r$, so we have $r U(0)$ new organisms, in addition to the $U(1)$ we already have, so $U(2)=U(1)+r U(0)$. In general, in month $t+1$, we have all the organisms we had at the end of month $t$, which is $U(t)$ organisms, plus those born as a result of breeding in month $t$, which is $r U(t-1)$ organisms. The resulting model is\n",
     "\n",
     "$$\n",
@@ -102,7 +105,8 @@
     ":label: ex4_3\n",
     "Predicting the weather. Suppose that there is a probability $p$ of there being a dry day (no rain) after a wet day (some rain) and a probability $q$ of there being a dry day after a dry day. Suppose it is a dry day today. What is the probability that it will be a dry day in $t$ days time, as a function of $p$ and $q$ ? Find the numerical value for $p=0.2$, and $q=0.8$, and $t=1,2,3,4,5$.\n",
     "\n",
-    "## Solution.\n",
+    "**Solution.**\n",
+    "\n",
     "Let $U(t)$ be the probability that it is dry on day $t$. Then the probability of it being wet on day $t$ is $1-U(t)$. Thus probability of it being dry on day $t+1$ is\n",
     "\n",
     "$$\n",
@@ -140,7 +144,8 @@
     "\n",
     "(c) Which steady state solution does the system appear to be moving towards?\n",
     "\n",
-    " ## Solution.\n",
+    "**Solution.**\n",
+    "\n",
     "The parameter $r$ is the net reproductive rate of the organisms, which we are assuming is the same for both populations. Parameters $a$ and $\\alpha$ denote the strength of intraspecific competition (meaning the competition of rabbits with other rabbits and sheep with other sheep) for $U(t)$ and $V(t)$ respectively. The parameter $b$ denotes the effect of interspecific competition (meaning competition between rabbits and sheep) on the death rate of rabbits and $\\beta$ denotes the effect of interspecies competition on the death rate of sheep.\n",
     "\n",
     "(a) Let $U_{*}$ and $V_{*}$ denote the steady states of $U(t)$ and $V(t)$ respectively. Then, using\n",
