--- a/_sources/lecture9.ipynb
+++ b/_sources/lecture9.ipynb
@@ -26,7 +26,9 @@
     "\\end{equation*}\n",
     "$$\n",
     "```\n",
+    "\n",
     "```{prf:example}\n",
+    ":label: ex9_1\n",
     "Draw the direction field for a population of organisms with a seasonally fluctuating birth rate and constant intraspecific competition, given as follows\n",
     "\n",
     "$$\n",
@@ -35,7 +37,8 @@
     "\\end{equation*}\n",
     "$$\n",
     "\n",
-    "## Solution. \n",
+    "**Solution.**\n",
+    "\n",
     "We want to draw arrows on the $(U, t)$-plane describing the direction of change of the solution. But the direction of change is simply the gradient of the derivative, $\\dot{U}$, and we have a formula for that in Equation (104). With this in mind, the general technique for plotting a direction field is as follows.\n",
     "\n",
     "1. Select a point $(t, U)$.\n",
@@ -79,7 +82,8 @@
     "\n",
     "Plot the direction field in the case $r=K=\\mu=1$ for $0 \\leq U \\leq 2$ and $0 \\leq t \\leq 3$. What do you think will happen to $U(t)$ as $t \\rightarrow \\infty$ ? Why?\n",
     "\n",
-    "## Solution. \n",
+    "**Solution.**\n",
+    "\n",
     "Values of $\\dot{U}$ for various $0 \\leq U \\leq 2$ and $0 \\leq t \\leq 3$ are given in Table 9. The resulting direction field is shown in Figure 14. If we start at any initial location $U(0)$, we see that the trajectory seems to be tending to 0 , so the animals die out. This is because the carrying capacity is $\\exp (-t)$, which tends to zero over time, i.e. the size of population that the environment can sustain decreases to zero over time.\n",
     "\n",
     "| $U \\downarrow, t \\rightarrow$ | 0 | 0.5 | 1 | 1.5 | 2 | 2.5 | 3 |\n",
